@@ -998,10 +998,10 @@ bool Index::covers(aql::Projections& projections) const {
   return true;
 }
 
-void Index::warmup(transaction::Methods*,
-                   std::shared_ptr<basics::LocalTaskQueue>) {
+Result Index::scheduleWarmup() {
   // Do nothing. If an index needs some warmup
   // it has to explicitly implement it.
+  return {};
 }
 
 /// @brief generate error message
