@@ -79,11 +79,10 @@ RocksDBTransactionState::RocksDBTransactionState(
     TRI_vocbase_t& vocbase, TransactionId tid,
     transaction::Options const& options)
     : TransactionState(vocbase, tid, options),
-      _cacheTx(nullptr),
 #ifdef ARANGODB_ENABLE_MAINTAINER_MODE
       _users(0),
 #endif
-      _parallel(false) {
+      _cacheTx(nullptr) {
 }
 
 /// @brief free a transaction container
@@ -389,9 +388,6 @@ RocksDBTransactionMethods* RocksDBTransactionState::toMethods(
       collectionId);
 }
 
-void RocksDBTransactionState::prepareForParallelReads() { _parallel = true; }
-bool RocksDBTransactionState::inParallelMode() const { return _parallel; }
-
 #ifdef ARANGODB_ENABLE_MAINTAINER_MODE
 RocksDBTransactionStateGuard::RocksDBTransactionStateGuard(
     RocksDBTransactionState* state) noexcept
@@ -406,10 +402,7 @@ RocksDBTransactionStateGuard::~RocksDBTransactionStateGuard() {
 
 /// @brief constructor, leases a builder
 RocksDBKeyLeaser::RocksDBKeyLeaser(transaction::Methods* trx)
-    : _ctx(trx->transactionContextPtr()),
-      _key(RocksDBTransactionState::toState(trx)->inParallelMode()
-               ? nullptr
-               : _ctx->leaseString()) {
+    : _ctx(trx->transactionContextPtr()), _key(_ctx->leaseString()) {
   TRI_ASSERT(_ctx != nullptr);
   TRI_ASSERT(_key.buffer() != nullptr);
 }
